--- a/seamless_docs/public.css
+++ b/seamless_docs/public.css
@@ -5,23 +5,28 @@
 form.odoform fieldset.section.fieldset {
   padding-left: 0;
   padding-right: 0;
-  font-family: 'Montserrat', arial, sans-serif;
+  font-family: Lora, serif;
+  font-weight: 300;
+  font-size: 1.125rem;
+  line-height: 2.4375rem;
+  color: #58585B;
 }
 
 div[class*="item control-group"] > label[class*="control-label span2"],
 form.odoform .inline_group_item label {
   font-family: "Montserrat",sans-serif;
   text-transform: uppercase;
-  font-weight: 400;
+  font-weight: 700;
   font-size: 0.75rem;
   line-height: 0.21667rem;
   margin: 0rem 0rem 0.54167rem 0rem;
-  letter-spacing: 1px;
-  color: #000;
+  letter-spacing: 0.0645rem;
+  color: #061622;
 }
 
 form.odoform .inline_group_item label {
-  color: #929292;
+  font-weight: 300;
+  color: #061622;
   margin-top: 0.5rem;
 }
 
@@ -36,10 +41,10 @@ form.odoform textarea, form.odoform select, form.odoform input[type="text"], for
 
 form.odoform fieldset.fieldset p {
   font-family: Lora, serif;
-  font-size: 1.5em;
-  line-height: 1.6 !important;
+  font-size: 2.08333333333em;
+  line-height: 1.92 !important;
   font-style: italic;
-  color: #091F2F;
+  color: #D2D2D2;
 }
 
 .module_actions .action_button.primary {
