Add link styling for boston.gov seamless docs

--- a/seamless_docs/public.css
+++ b/seamless_docs/public.css
@@ -42,6 +42,15 @@ form.odoform fieldset.fieldset p {
   color: #091F2F;
 }
 
+a {
+  color: #288BE4;
+}
+
+a:hover {
+  color: #fb4d42;
+  text-decoration: none;
+}
+
 .module_actions .action_button.primary {
   background-color: #288be4;   
 }
